build_log_v5.txt
warning: `C:\Users\nalum\nih-plug-projects\dtcwpt_morph\.cargo\config` is deprecated in favor of `config.toml`
  |
  = help: if you need to support cargo 1.38 or earlier, you can symlink `config` to `config.toml`
    Checking dtcwpt_morph v0.1.0 (C:\Users\nalum\nih-plug-projects\dtcwpt_morph)
warning: unused import: `nih_plug_egui::EguiState`
 --> src\lib.rs:2:5
  |
2 | use nih_plug_egui::EguiState;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Shape`
 --> src\editor.rs:4:97
  |
4 | use nih_plug_egui::egui::{self, Color32, RichText, Rect, Pos2, Stroke, CornerRadius, UiBuilder, Shape};
  |                                                                                                 ^^^^^

error[E0308]: mismatched types
   --> src\editor.rs:310:27
    |
310 |             view.offset = p_rel * (1.0 - zoom) + view.offset * zoom;
    |             -----------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Vec2`, found `Pos2`
    |             |
    |             expected due to the type of this binding

error[E0599]: no method named `with_alpha` found for struct `Color32` in the current scope
   --> src\editor.rs:441:81
    |
441 |         painter.circle_stroke(screen_pos, radius, Stroke::new(1.0, stroke_color.with_alpha(alpha)));
    |                                                                                 ^^^^^^^^^^ method not found in `Color32`

warning: unused variable: `is_pure_h`
   --> src\processor.rs:352:17
    |
352 | ...   let is_pure_h = dest == 3 || (dest > 1 && (dest & (dest + 1)) == 0 && dest.count_ones() == (dest.trailing_ones())); // Pure H path:...
    |           ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_is_pure_h`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `node_ids`
   --> src\processor.rs:539:5
    |
539 |     node_ids: &[usize],
    |     ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_node_ids`

Some errors have detailed explanations: E0308, E0599.
For more information about an error, try `rustc --explain E0308`.
warning: `dtcwpt_morph` (lib) generated 4 warnings
error: could not compile `dtcwpt_morph` (lib) due to 2 previous errors; 4 warnings emitted
